--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "graphql": "^16.3.0",
     "next": "12.1.4",
+    "normalize.css": "^8.0.1",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
